ABOUT/ACTIVES - update text
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -6,8 +6,7 @@
 <nav class="pills">
   <ul>
     <li data-section-name="president-message" class="active"><a>Home</a></li>
-    <li data-section-name="cal-history"><a>History at Cal</a></li>
-    <li data-section-name="national-history"><a>National History</a></li>
+    <li data-section-name="history"><a>History</a></li>
     <li data-section-name="chapter-house"><a>Chapter House</a></li>
     <li data-section-name="brotherhood"><a>Brotherhood</a></li>
     <li data-section-name="social"><a>Social Events</a></li>
@@ -20,45 +19,56 @@
 <section name="president-message">
   <%= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
   <h3>A Message from Our President</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
+  <p>Theta Chi is a place where men are grown and enabled. The values of our fraternity resonate beyond the walls of just brotherhood. Mu Chapter is committed to the betterment of its brothers in all aspects of life, including the academic, philanthropic, social, athletic, and spiritual components of sturdy manhood. Members dedicated to the rigorous coursework of UC Berkeley empower their minds and prioritize their scholarly duties before anything else, as is our maxim, “Alma Mater First, Theta Chi For Alma Mater.”</p>
+  <p>As brothers, we engage ourselves with our community and serve local businesses with our philanthropic agenda, which includes hosting our own successful philanthropy event and completing several hours of community service together, fulfilling the ideology of our motto, “the helping hand.” Brothers also get to enjoy the fruit of their hard work by balancing these altruistic virtues with an admirable social life of sorority mixers, traditional parties, alumni networking, as well as many brotherhood events and trips that make it great to be a Theta Chi. Mu Chapter also focuses heavily on athleticism. Having brothers involved in Division I and Club sports, Theta Chis compete on the intramural level in a variety of sports as a chapter and recognize the importance of having a sound body.</p>
+  <p>As members grow through their undergraduate careers, Theta Chi provides them with opportunities to become leaders, understand one another, and even becomes a support system of brotherhood that brothers will always take with them. Theta Chi is for life, which is why Mu Chapter strives to be the best to uphold its high and sacred purpose of molding ambitious gentlemen, and has rightfully done so, for exactly 100 years now at Cal. I welcome your interest, whether you are an alumnus that wants to reconnect with Mu or an incoming freshman at Cal, and invite you to seek out the beneficial facets of being connected with Theta Chi.</p>
+
+  <p>Love and respect,</p>
+
+  <p>
+    Bernardo Jaramillo<br>
+    President || Theta Chi Fraternity | Mu Chapter<br>
+    University of California, Berkeley ‘14
+  </p>
 </section>
 
-<section name="cal-history">
-  <h3>History at Cal</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
-</section>
-
-<section name="national-history">
-  <h3>National History</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
+<section name="history">
+  <h3>History</h3>
+  <p>The history of Theta Chi Fraternity begins on April 10 1856 in the Old South Barracks of Norwich University in Norwich, Vermont. Founded by Frederick Norton Freeman and Arthur Chase, the fraternity was built to create gentlemen through the ideals of  friendship, loyalty to one’s university and education, patriotism, brotherhood, and above all, giving a helping hand whenever possible. This shows the origin of our motto “An Assisting hand” and was proven when over seven hundred gentlemen of Theta Chi and other Norwich University students were trained and sent to fight for the Union Army in the battle of Gettysburg and other civil war battles.</p>
+  <p>These ideals are remembered and rigorously followed by the Mu Chapter of Theta Chi as well. Founded on November 6, 1913, the gentlemen of Mu Chapter have upheld the legacy of our founders for the last one hundred years. Our devotion to education is seen through brothers who excel in many different majors ranging from the liberal arts to science and engineering. Arthur Chase and Frederick Norton Freeman created Theta Chi Fraternity to promote the ideals that made them gentlemen, and through our chapter's dedication over the past one hundred years, the gentlemen of Theta Chi Fraternity Mu Chapter have managed to keep the dreams and ideals of our founders alive.</p>
 </section>
 
 <section name="chapter-house">
   <h3>The Chapter House</h3>
-  <p>Our beautiful house resides on the iconic corner of Piedmont and Dwight, where it has stood for over a hundred years. The house was originally built in 19-- as the mansion of the mayor of Oakland. In 19--, Theta Chi moved from its former home on Leconte Ave. to the current location. A large addition was added in order to greatly increase the living capacity of the house. Recent improvements have included remodeled bathrooms, the addition of a new room behind the bar, and restoration of room #1, Presidente.</p>
+  <p>Our already beautiful house has recently undergone major renovations downstairs and there are more exciting projects coming in the near future. During the summer of 2012, we added one more room where the old pantry was located, renovated the bathroom in the downstairs hallway, and upgraded the old chef's room. The renovations include increase the capacity of the house and have turned two former eyesores into beautifully furnished living spaces. The new private bathroom is a beautiful upgrade for downstairs residents and female guests. Room 1, also known as Presidente, and its private bathroom were also recently renovated to match the newer rooms in the house. The bathroom has the same beautiful period-appropriate tile as the new downstairs bathroom.</p>
+  <p>Under current expectations, we plan on adding a third floor to our house to provide more rooms for our brothers. Rooms 10 and 11 as well the nearby bathroom will be converted into a new game room for social and recreational uses. Furthermore, the upstairs bathroom will be renovated with modern systems, similar to the bathroom constructed downstairs. Furthermore, the main room downstairs will be converted to an alumni living room and our foyer will be resurfaced and repainted to give a great first impression to everyone who visits the house.</p>
 </section>
 
 <section name="brotherhood">
   <h3>Brotherhood</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
+  <p>As a brother in Theta Chi, we spend the majority of the time taking classes, eating meals, playing sports, or just hanging out with our brothers. While our interaction is pretty constant and we have tons of fun together, we also hold many big, traditional events every semester in addition to the cookouts, ski trips, and other activities that are constantly occurring.</p>
+  <p>One of the most important brotherhood events we have every semester is our retreat. It is a weekend long getaway trip to a nearby vacation spot. Not only does this allow brothers to relax and have a little fun, but it allows a critical assessment of the performance of the chapter thus far. We sit down and discuss the problems we are having and set real goals that we can accomplish for the rest of the semester. Retreat serves as a quick reminder of the direction and goals of the chapter.</p>
+	<p>Another major event is family night. This is when big brothers find out who their little brothers are and vice versa. The big brother acts as a mentor to their respective little brother. The pledges are introduced to all members of their family and several brotherhood bonding events take place. It is one of the first opportunities for the pledges to hang out and share an experience with the actives. This strengthens the pledge-brother bond and is an early lesson of what it means to be a brother.</p>
+	<p>The house also sponsors a Winnebago trip down to either UCLA or USC for the football game. We rent out several large RVs and make the drive down to Los Angeles with a large number of brothers and girls. We get to stay with the chapters at UCLA or USC and experience a fun weekend on another campus.</p>
 </section>
 
 <section name="social">
   <h3>Social Events</h3>
-  <p>Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.</p>
+  <p>After a hard week of Berkeley classes, our brothers are always ready for a break. We have a full calendar of social events over the course of the semester, including exchanges with the lovely sororities of Cal, themed parties, and date night at the end of the year. Our biggest party is the annual "Temple of Doom" in the fall, where the house gets decked out Indiana Jones style. You can pictures from our social events in the photos section.</p>
 </section>
 
 <section name="academics">
   <h3>Academics</h3>
-  <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam.</p>
+  <p>Theta Chi's maxim is "Alma Mater First and Theta Chi for Alma Mater" and here at Mu Chapter we follow this ideal everyday of our lives. Our brothers excel in many different, difficult majors ranging from business to political science to all types of science and engineering. We offer the Helping Hand to each other by providing an in-house tutoring program that pairs up brothers based on their classes and majors. With study hours hosted at the house and the library 6 days a week, we ensure that academic excellence is a top priority.</p>
 </section>
 
 <section name="philanthropy">
   <h3>Philanthropy</h3>
-  <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi.</p>
+  <p>Brothers of Theta Chi place a large emphasis on giving back and extending the “helping hand.” Our brothers are involved with homeless shelters, schools, and local beautifications.  We see philanthropy as a way for our Brothers to bond with each other and the Greek community at large. We are currently working on our new fall philanthropy event: “Pie a Theta Chi.” Our “Car Smash” event last Spring was a great success and we hope to keep our philanthropic momentum going this semester.</p>
+  <p>In addition to community service and our own events, brothers attend a large number of philanthropy events hosted by sororities, other fraternities, and other campus organizations. These events are a lot of fun and very beneficial to the charitable organizations they support.</p>
 </section>
 
 <section name="athletics">
   <h3>Athletics</h3>
-  <p>Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin sodales libero eget ante. Nulla quam. Aenean laoreet. Vestibulum nisi lectus, commodo ac, facilisis ac, ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet eget, justo. Sed pretium blandit orci. Ut eu diam at pede suscipit sodales.</p>
+  <p>At Mu Chapter of Theta Chi, we love staying active. From running through the sprawling hills overlooking campus or lifting at the RSF to competing in intramural, club, and varsity athletics at Cal, staying active and healthy is a cornerstone of the house's livelihood. The house sponsors soccer, basketball, and football teams in the fraternity intramural leagues as well as a corec volleyball team with a sorority. Basketball is a house favorite; there is almost always a small game going on on our patio court or a few guys at the gym playing pickup games. Keeping healthy is a big deal at Mu Chapter, and we do a great job of making it as easy as possible to get a good game going.</p>
 </section>
