--- a/app/views/landing/actives.html.erb
+++ b/app/views/landing/actives.html.erb
@@ -2,12 +2,33 @@
 
 <div class="page-header">
   <h1>Active Members</h1>  
-  <p>Recruitment is an essential part of the Greek system and one that look forward to twice a year as an opportunity to meet future brothers.</p>
+  <p>Brotherhood is for life. Members of Theta Chi live, study, and party together 24/7.</p>
 </div>
 <hr>
 
-<ul>
-  <li>Officers</li>
-  <li>Expectations of members</li>
-  <li>List by pledge class?</li>
-</ul>
+<section name="officers">
+  <h3>Current Officers</h3>
+  <p>Our executive officers are in charge of running the house. They make the big decisions, control our large budget, and ensure that everything goes smoothly throughout the semester.</p>
+  <dl>
+    <dt>President</dt>
+    <dd>Bernardo Jaramillo</dd>
+    
+    <dt>Vice President</dt>
+    <dd>Rohan Jonnalagadda</dd>
+    
+    <dt>Secretary</dt>
+    <dd>Josh Toyofuku</dd>
+    
+    <dt>Treasurer</dt>
+    <dd>Justin Lee</dd>
+    
+    <dt>Marshal</dt>
+    <dd>Matt Mayes</dd>
+    
+    <dt>House Manager</dt>
+    <dd>Ani Sapru</dd>
+    
+    <dt>Rush Chair</dt>
+    <dd>Eric Talamantez</dd>
+  </dl>
+</section>
