--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
   
   <h4><a name="add-comment">Add Comment</a></h4>
   
-  <%= form_for [@post, @post.comments.build] do |f| %>
+  <%= form_for [@post, comment = @post.comments.build] do |f| %>
     <div class="field">
       <%= f.label :name %><br />
       <%= f.text_field :name %>
@@ -33,6 +33,11 @@
     <div class="field">
       <%= f.label :text %><br />
       <%= f.text_area :text %>
+    </div>
+    <div class="field" style="margin-bottom: 5px;">
+      <%= f.label :humanizer_answer, comment.humanizer_question %><br />
+      <%= f.text_field :humanizer_answer %>
+      <%= f.hidden_field :humanizer_question_id %>
     </div>
     <div class="actions">
     <%= f.submit "Submit Comment", :style => "line-height: 19px;" %>
