ALUMNI - correct alumni board listings
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/alumni.html.erb
+++ b/app/views/landing/alumni.html.erb
@@ -33,7 +33,10 @@
     <dt>Treasurer</dt>
     <dd>Michael Tempero</dd>
     
-    <dt>House Manager</dt>
-    <dd>Stan Nielson</dd>
+    <dt>Chapter Advisor</dt>
+    <dd>Mike Taylor</dd>
+    
+    <dt>Member at Large</dt>
+    <dd>Stan Harkness</dd>
   </dl>
 </section>
