--- a/app/views/landing/actives.html.erb
+++ b/app/views/landing/actives.html.erb
@@ -11,7 +11,7 @@
   <p>Our executive officers are in charge of running the house. They make the big decisions, control our large budget, and ensure that everything goes smoothly throughout the semester.</p>
   <dl>
     <dt>President</dt>
-    <dd>Bernardo Jaramillo</dd>
+    <dd>Eric Smith</dd>
     
     <dt>Vice President</dt>
     <dd>Rohan Jonnalagadda</dd>
