--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -4,8 +4,7 @@
 
 <p>This site is meant to be a convenient location for active members and graduates alike to catch up on current chapter events and stay connected with one another. If you are not already receiving our alumni newsletter, please contact our Alumni Chairman <%= mail_to "r.hayes@berkeley.edu", "Ryan Hayes", :subject => "Mu Chapter Association Newsletter", :body => "Hello, I would like to start receiving the Mu Chapter Newsletter.", :encode => :hex %>. Additionally, if you have any suggestions for news stories or additions to the site, please email brother <%= mail_to "murphym1005@gmail.com", "Michael Murphy", :subject => "Cal Theta Chi Website", :encode => :hex %>.</p>
 
-<p>Theta Chi Mu Chapter will host its annual Founders Day event on Saturday, April 23rd! Join the active brothers and alumni of all ages in celebrating the successes of our chapter and fraternity.</p>
-<p>Come experience a four course dinner through the chapter house, and enjoy a different wine pairing with each course. Stay for a night of catching up with old friends and getting to know the active chapter! Over 45 alumni enjoyed last year’s Founders Day event, and we are capping this year’s attendance at 100 people. An auction will follow dinner to raise money for buying new furniture for the common areas, as well as to provide grounding for our long term renovations. The price of dinner is $100. RSVP quickly to guarantee your spot! Go to muoxfoundersday.eventbrite.com to RSVP!
+<p>Theta Chi Mu Chapter will host its annual Founders Day event on Saturday, April 23rd! Join the active brothers and alumni of all ages in celebrating the successes of our chapter and fraternity.
 
 </p>
 
