--- a/app/views/landing/actives.html.erb
+++ b/app/views/landing/actives.html.erb
@@ -14,21 +14,24 @@
     <dd>Eric Smith</dd>
     
     <dt>Vice President</dt>
-    <dd>Rohan Jonnalagadda</dd>
+    <dd>Ryan Scarff</dd>
     
     <dt>Secretary</dt>
-    <dd>Josh Toyofuku</dd>
+    <dd>Michael Maxey</dd>
     
     <dt>Treasurer</dt>
-    <dd>Justin Lee</dd>
+    <dd>Austin Young</dd>
     
     <dt>Marshal</dt>
-    <dd>Matt Mayes</dd>
+    <dd>Rushil Sheth</dd>
     
     <dt>House Manager</dt>
-    <dd>Ani Sapru</dd>
+    <dd>Josh Silva</dd>
     
     <dt>Rush Chair</dt>
-    <dd>Eric Talamantez</dd>
+    <dd>Lucas Slipe</dd>
+    
+    <dt>Alumni Chair</dt>
+    <dd>Ryan Hayes</dd>
   </dl>
 </section>
