--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -64,7 +64,7 @@
 
 <section name="philanthropy">
   <h3>Philanthropy</h3>
-  <p>Brothers of Theta Chi place a large emphasis on giving back and extending the “helping hand.” Our brothers are involved with homeless shelters, schools, and local beautifications.  We see philanthropy as a way for our Brothers to bond with each other and the Greek community at large. Our philanthropy event this event Our philanthropy event this semester, a Kids Day for veterans to bring their children to, was a great success and we hope to keep our philanthropic momentum going this semester.</p>
+  <p>Brothers of Theta Chi place a large emphasis on giving back and extending the “helping hand.” Our brothers are involved with homeless shelters, schools, and local beautifications.  We see philanthropy as a way for our Brothers to bond with each other and the Greek community at large. Our philanthropy event this semester, a Kids' Day for veterans to bring their children to, was a great success and we hope to keep our philanthropic momentum going this semester.</p>
   <p>In addition to community service and our own events, brothers attend a large number of philanthropy events hosted by sororities, other fraternities, and other campus organizations. These events are a lot of fun and very beneficial to the charitable organizations they support.</p>
 </section>
 
